// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"Todos\\"
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`base config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testResolvers.js\\"


const name_0 = \\"Todos\\"

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`base(v2) config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"Todos\\"
const resolvers_0 = {
  todos() {},
  items() {}
}
const name_1 = \\"Items\\"
const resolvers_1 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

readModels.push({
  name: name_1
, resolvers: resolvers_1
})

export default readModels
"
`;

exports[`base(v2) config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testResolvers.js\\"

import projection_1 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_1 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testResolvers.js\\"


const name_0 = \\"Todos\\"
const name_1 = \\"Items\\"

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, resolvers: resolvers_0
})

readModels.push({
  name: name_1
, projection: projection_1
, resolvers: resolvers_1
})

export default readModels
"
`;

exports[`config with storage + process.env works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"Todos\\"
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`config with storage + process.env works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testResolvers.js\\"


const name_0 = \\"Todos\\"
const storage_0 = {
  \\"adapter\\": process.env.READ_MODEL_TODOS_ADAPTER,
  \\"options\\": {
    \\"size\\": process.env.READ_MODEL_TODOS_OPTIONS_SIZE
  }
}
const storageAdapter_0 = interopRequireDefault(
  require(storage_0.adapter)
).default
const storageOptions_0 = storage_0.options

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, resolvers: resolvers_0
, snapshot: {
    adapter: storageAdapter_0,
    options: storageOptions_0
  }
})

export default readModels
"
`;

exports[`config with storage works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"


const name_0 = \\"Todos\\"
const resolvers_0 = {
  todos() {},
  items() {}
}

const readModels = []

readModels.push({
  name: name_0
, resolvers: resolvers_0
})

export default readModels
"
`;

exports[`config with storage works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import resolvers_0 from \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testResolvers.js\\"


const name_0 = \\"Todos\\"
const storage_0 = {
  \\"adapter\\": \\"/home/mrcheater/resolve/packages/resolve-scripts/test/alias/files/testSnapshotAdapter.js\\",
  \\"options\\": {
    \\"size\\": 100
  }
}
const storageAdapter_0 = interopRequireDefault(
  require(storage_0.adapter)
).default
const storageOptions_0 = storage_0.options

const readModels = []

readModels.push({
  name: name_0
, projection: projection_0
, resolvers: resolvers_0
, snapshot: {
    adapter: storageAdapter_0,
    options: storageOptions_0
  }
})

export default readModels
"
`;
